# AutoDash

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose-backend.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
app/: .dockerignore  .env.example  Dockerfile  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
app/drizzle/: 0000_jittery_doctor_strange.sql  0000_old_loki.sql  0001_misty_genesis.sql  0001_silky_domino.sql  0001_tough_spirit.sql  0002_clumsy_lionheart.sql  0002_loving_mole_man.sql  0003_dusty_preak.sql  0003_equal_serpent_society.sql  0004_needy_silverclaw.sql  0005_eager_smiling_tiger.sql  0007_pale_storm.sql
app/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  _journal.json
app/src/: app.css  hooks.server.ts  schema.ts
app/src/lib/charts/: Chart.svelte  constants.ts  controller.ts  index.ts  types.ts
app/src/lib/charts/BarChart/: BarChart.svelte  constants.ts
app/src/lib/charts/CustomChart/: CustomChart.svelte
app/src/lib/charts/LineChart/: LineChart.svelte  constants.ts
app/src/lib/charts/PieChart/: PieChart.svelte  constants.ts
app/src/lib/client/stores/: index.ts
app/src/lib/server/repo/: index.ts
app/src/lib/utils/: utils.ts
app/src/lib/utils/export/: index.ts
app/src/lib/widgets/: Badge.svelte  constants.ts
app/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte  +server.ts  index.ts
app/src/routes/(auth)/: +layout.server.ts
app/src/routes/auth/: index.ts
app/src/routes/dashboards/: +page.server.ts  +page.svelte
app/src/routes/prompt/: +page.server.ts  +page.svelte  Combobox.svelte  rpc.ts  schema.ts  topics.ts
app/src/routes/signin/: +page.server.ts  +page.svelte
app/src/routes/support/: +page.svelte
app/src/routes/test/: +page.server.ts  +page.svelte  +server.ts
app/src/routes/user/: +page.server.ts  +page.svelte  model.server.ts  schema.ts
app/src/routes/widgets/: +page.svelte  constants.ts
app/utils/: migrate.ts
certbot/: .gitignore
conf/: redis.conf
ml/: Dockerfile  pyproject.toml  web_entrypoint.py
ml/data/: llm_block_examples.json  schemas.json  schemas.txt
ml/llm/: utils.py
ml/llm/report/: agent.py  model.py  templates.py
ml/llm/widget/: agent.py  model.py  router.py  templates.py
ml/llm/widget/widget_type/: __init__.py  badge_chart.py  bar_chart.py  line_chart.py  pie_chart.py  table_chart.py  text_chart.py
ml/presentation/: dependencies.py
ml/presentation/web/: main.py  model_router.py  rapidoc.html
ml/presentation/web/router/: health_router.py  model_router.py  parser_router.py
ml/repository/: chroma_repository.py  redis_repository.py
ml/schemas/: base.py  message.py  parser.py  report_template.py  report_widget.py  search_parser.py  widget.py
ml/service/: health_service.py  retriever_service.py
ml/shared/: containers.py  settings.py  ulid.py
ml/supplier/: callback_handler.py  local_llm_supplier.py  openapi_supplier.py  search_supplier.py
ml_and_back/: .gitignore  .pre-commit-config.yaml  docker-compose.yaml
ml_and_back/back/: Dockerfile  README.md  config.py
ml_and_back/ml/: pyproject.toml  web_entrypoint.py
ml_and_back/ml/presentation/web/: model_router.py  parser_router.py  schemas.py
ml_and_back/ml/schemas/: message.py
ml_and_back/ml/shared/: settings.py
ml_and_back/ml/supplier/: openapi_supplier.py
ml_and_back/nginx/: raw_nginx.conf
nginx/: nginx.conf
search/: Dockerfile  main.py  requirements.txt
(+50 files in other folders)
