[tool.poetry]
name        = "lct_ml_backend_service"
version     = "0.1.0"
description = ""
authors     = ["sostema <sostema@gmail.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python = "~3.11.9"
redis = "^5.0.6"


[tool.poetry.group.langchain.dependencies]
langchain           = "^0.2.5"
langchain-community = "^0.2.5"
langchain-openai    = "^0.1.8"
langchain-chroma    = "^0.1.1"


[tool.poetry.group.fastapi.dependencies]
fastapi       = "^0.111.0"
loguru        = "^0.7.2"
pydantic      = "^1.10.16"
pyhumps       = "^3.8.0"
python-dotenv = "^1.0.1"
requests      = "^2.32.3"
ujson         = "^5.10.0"
ulid-py       = "^1.1.0"
uvicorn       = "^0.23.2"
websockets    = "^12.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff       = "^0.4.9"
jupyterlab = "^4.2.2"

[tool.ruff]
fix           = true
output-format = "grouped"
preview       = true

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "B", "I", "TID"]
ignore        = ["E501", "F722"]
unfixable     = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs     = true
plugins                = ["numpy.typing.mypy_plugin"]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
